--- a/Exercise1_03.ipynb
+++ b/Exercise1_03.ipynb
@@ -22,18 +22,126 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "[['-' '-' '-']\n",
+      " ['-' '-' '-']\n",
+      " ['-' '-' '-']]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# steps Steps 1-5 from Exercise 1.02"
+    "# steps Steps 1-5 from Exercise 1.02\n",
+    "import numpy as np\n",
+    "from random import choice\n",
+    "\n",
+    "combo_indices = [['0,1,2'], ['0,3,6'], ['0,4,8'], ['3,4,5'], ['6,7,8'], ['1,4,7'], ['2,5,8'], ['2,4,6']]\n",
+    "\n",
+    "EMPTY = \"-\"\n",
+    "IA = \"X\"\n",
+    "P = \"O\"\n",
+    "\n",
+    "board = [[EMPTY,EMPTY,EMPTY],[EMPTY,EMPTY,EMPTY],[EMPTY,EMPTY,EMPTY]]\n",
+    "\n",
+    "def boardP(board):\n",
+    "    print(\"\\n\")\n",
+    "    board_r = np.array(board)\n",
+    "    print(board_r)\n",
+    "    print(\"\\n\")\n",
+    "    \n",
+    "boardP(board)\n",
+    "\n",
+    "def player_move(board, row, col):\n",
+    "    if board[row][col] != IA:\n",
+    "        board[row][col] = P\n",
+    "        return board\n",
+    "    else:\n",
+    "        return \"Espacio ocupado\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "First player wins -IA-: 0\n",
+      "Second player wins -P-: 0\n",
+      "Draw: 0\n",
+      "Total: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# steps 2-5 of Acctivity"
+    "# steps 2-5 of Acctivity\n",
+    "moves = list()\n",
+    "move_list = list()\n",
+    "def map_all_moves(move_list):\n",
+    "    for i in move_list:\n",
+    "        moves.append(all_moves_from_board(board, move_list))\n",
+    "    return moves\n",
+    "    \n",
+    "moves = map_all_moves(move_list)\n",
+    "print(moves)\n",
+    "\n",
+    "IA_wins=list()\n",
+    "P_wins=list()\n",
+    "draws = list()\n",
+    "boards_state=list()\n",
+    "def filter_wins(winner):\n",
+    "    if winner == 'X':\n",
+    "        IA_wins.append(9-len(move_list))\n",
+    "        P_wins.append(0)\n",
+    "        draws.append(0)\n",
+    "    elif winner == 'P':\n",
+    "        P_wins.append(9-len(move_list))\n",
+    "        IA_wins.append(0)\n",
+    "        draws.append(0)\n",
+    "    else:\n",
+    "        draws.append(9-len(move_list))\n",
+    "        P_wins.append(0)\n",
+    "        IA_wins.append(0)\n",
+    "    boards_state.append(board)\n",
+    "    \n",
+    "def count_possibilities():\n",
+    "    IA_counts = 0\n",
+    "    P_counts = 0\n",
+    "    draws_counts = 0\n",
+    "    c = 1\n",
+    "    for i in IA_wins:\n",
+    "        print(\"step \"+str(c)+\". moves: \"+str(i))\n",
+    "        if i != 0:\n",
+    "            IA_counts += 1\n",
+    "        c += 1\n",
+    "    c = 1\n",
+    "    for i in P_wins:\n",
+    "        print(\"step \"+str(c)+\". moves: \"+str(i))\n",
+    "        if i != 0:\n",
+    "            P_counts += 1\n",
+    "        c += 1\n",
+    "    c = 1\n",
+    "    for i in draws:\n",
+    "        print(\"step \"+str(c)+\". moves: \"+str(i))\n",
+    "        if i != 0:\n",
+    "            draws_counts += 1\n",
+    "        c += 1\n",
+    "    print(\"First player wins -IA-: \"+str(IA_counts))\n",
+    "    print(\"Second player wins -P-: \"+str(P_counts))\n",
+    "    print(\"Draw: \"+str(draws_counts))\n",
+    "    print(\"Total: \"+str(draws_counts+IA_counts+P_counts))\n",
+    "\n",
+    "count_possibilities()"
    ]
   },
   {
@@ -45,10 +153,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def game_won_by(board):\n",
+    "    won = False\n",
+    "    winner = \"Nothing\"\n",
+    "    for i in combo_indices:\n",
+    "        if i == ['0,1,2']:\n",
+    "            if board[0][0]==board[0][1] and board[0][1]==board[0][2] and board[0][2]!=EMPTY:\n",
+    "                print(\"Ganador: \"+board[0][0])\n",
+    "                won = True\n",
+    "                winner = \"X\"\n",
+    "                break\n",
+    "        elif i == ['3,4,5']:\n",
+    "            if board[1][0] == board[1][1] and board[1][1] == board[1][2] and board[1][2] != EMPTY:\n",
+    "                print(\"Ganador: \"+board[1][0])\n",
+    "                won = True\n",
+    "                winner = \"X\"\n",
+    "                print(\"Winn: \" + winner)\n",
+    "                break\n",
+    "        elif i == ['6,7,8']:\n",
+    "            if board[2][0] == board[2][1] and board[2][1] == board[2][2] and board[2][2] != EMPTY:\n",
+    "                print(\"Ganador: \"+board[2][0])\n",
+    "                won = True\n",
+    "                winner = \"X\"\n",
+    "                print(\"Winn: \" + winner)\n",
+    "                break\n",
+    "        elif i == ['0,4,8']:\n",
+    "            if board[0][0] == board[1][1] and board[1][1] == board[2][2] and board[2][2] != EMPTY:\n",
+    "                print(\"Ganador: \"+board[0][0])\n",
+    "                won = True\n",
+    "                winner = \"X\"\n",
+    "                print(\"Winn: \" + winner)\n",
+    "                break\n",
+    "        elif i == ['1,4,7']:\n",
+    "            if board[0][1] == board[1][1] and board[1][1] == board[2][1] and board[2][1] != EMPTY:\n",
+    "                print(\"Ganador: \"+board[1][1])\n",
+    "                won = True\n",
+    "                winner = \"X\"\n",
+    "                print(\"Winn: \" + winner)\n",
+    "                break\n",
+    "        elif i == ['0,3,6']:\n",
+    "            if board[0][0] == board[1][0] and board[1][0] == board[2][0] and board[2][0] != EMPTY:\n",
+    "                print(\"Ganador: \"+board[1][0])\n",
+    "                won = True\n",
+    "                winner = \"X\"\n",
+    "                print(\"Winn: \" + winner)\n",
+    "                break\n",
+    "        elif i == ['2,5,8']:\n",
+    "            if board[0][2] == board[1][2] and board[1][2] == board[2][2] and board[2][2] != EMPTY:\n",
+    "                print(\"Ganador: \"+board[1][2])\n",
+    "                won = True\n",
+    "                winner = \"X\"\n",
+    "                print(\"Winn: \" + winner)\n",
+    "                break\n",
+    "        elif i == ['2,4,6']:\n",
+    "            if board[0][2] == board[1][1] and board[1][1] == board[2][0] and board[2][0] != EMPTY:\n",
+    "                print(\"Ganador: \"+board[1][1])\n",
+    "                won = True\n",
+    "                winner = \"X\"\n",
+    "                print(\"Winn: \" + winner)\n",
+    "                break\n",
+    "        else:\n",
+    "            print(\"Next\")\n",
+    "    \n",
+    "    return won, winner\n",
+    "    \n",
+    "game_won_by(board)\n",
+    "\n",
+    "move_list = list()\n",
+    "global moves_by_IA_WIN\n",
+    "def all_moves_from_board(board, move_list):\n",
+    "    k = 0\n",
+    "    move_list.clear()\n",
+    "    for i in range(3):\n",
+    "        for j  in range(3):\n",
+    "            if board[i][j] == EMPTY:\n",
+    "                move_list.append(str(k))\n",
+    "            k+=1\n",
+    "\n",
+    "all_moves_from_board(board, move_list)\n",
+    "\n",
+    "def ai_move(board, move_list):\n",
+    "    \n",
+    "    c_ia, c_empty, to_win_ia, k, founded = 0, 0, \"\", 0, False\n",
+    "    \n",
+    "    \n",
+    "    #FILAS\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            if i == 0:\n",
+    "                if board[i][j] == IA:\n",
+    "                    c_ia += 1\n",
+    "                if board[i][j] == EMPTY:\n",
+    "                    c_empty += 1\n",
+    "                    to_win_ia = str(k)\n",
+    "                if c_ia == 2 and c_empty == 1:\n",
+    "                    print(\"Escoge esto para ganar: \"+to_win_ia)\n",
+    "                    founded = True\n",
+    "            k += 1\n",
+    "            \n",
+    "    if founded == False:\n",
+    "        c_ia, c_empty, to_win_ia, k = 0, 0, \"\", 0\n",
+    "\n",
+    "        #FILAS\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if i == 1:\n",
+    "                    if board[i][j] == IA:\n",
+    "                        c_ia += 1\n",
+    "                    if board[i][j] == EMPTY:\n",
+    "                        c_empty += 1\n",
+    "                        to_win_ia = str(k)\n",
+    "                    if c_ia == 2 and c_empty == 1:\n",
+    "                        print(\"Escoge esto para ganar: \"+to_win_ia)\n",
+    "                        founded = True\n",
+    "                k += 1\n",
+    "                \n",
+    "    if founded == False:\n",
+    "        c_ia, c_empty, to_win_ia, k = 0, 0, \"\", 0\n",
+    "\n",
+    "        #FILAS\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if i == 2:\n",
+    "                    if board[i][j] == IA:\n",
+    "                        c_ia += 1\n",
+    "                    if board[i][j] == EMPTY:\n",
+    "                        c_empty += 1\n",
+    "                        to_win_ia = str(k)\n",
+    "                    if c_ia == 2 and c_empty == 1:\n",
+    "                        print(\"Escoge esto para ganar: \"+to_win_ia)\n",
+    "                        founded = True\n",
+    "                k += 1\n",
+    "                \n",
+    "    if founded == False:\n",
+    "        c_ia, c_empty, to_win_ia, k = 0, 0, \"\", 0        \n",
+    "        #COLUMNAS\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if j == 0:\n",
+    "                    if board[i][j] == IA:\n",
+    "                        c_ia += 1\n",
+    "                    if board[i][j] == EMPTY:\n",
+    "                        c_empty += 1\n",
+    "                        to_win_ia = str(k)\n",
+    "                    if c_ia == 2 and c_empty == 1:\n",
+    "                        print(\"Escoge esto para ganar: \"+to_win_ia)\n",
+    "                        founded = True\n",
+    "                k += 1\n",
+    "    \n",
+    "    if founded == False:\n",
+    "        c_ia, c_empty, to_win_ia, k = 0, 0, \"\", 0\n",
+    "\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if j == 1:\n",
+    "                    if board[i][j] == IA:\n",
+    "                        c_ia += 1\n",
+    "                    if board[i][j] == EMPTY:\n",
+    "                        c_empty += 1\n",
+    "                        to_win_ia = str(k)\n",
+    "                    if c_ia == 2 and c_empty == 1:\n",
+    "                        print(\"Escoge esto para ganar: \"+to_win_ia)\n",
+    "                        founded = True\n",
+    "                k += 1\n",
+    "    \n",
+    "    if founded == False:\n",
+    "        c_ia, c_empty, to_win_ia, k = 0, 0, \"\", 0\n",
+    "\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if j == 2:\n",
+    "                    if board[i][j] == IA:\n",
+    "                        c_ia += 1\n",
+    "                    if board[i][j] == EMPTY:\n",
+    "                        c_empty += 1\n",
+    "                        to_win_ia = str(k)\n",
+    "                    if c_ia == 2 and c_empty == 1:\n",
+    "                        print(\"Escoge esto para ganar: \"+to_win_ia)\n",
+    "                        founded = True\n",
+    "                k += 1\n",
+    "                \n",
+    "    #DIAGONALES\n",
+    "    if founded == False:\n",
+    "        c_ia, c_empty, to_win_ia, k = 0, 0, \"\", 0\n",
+    "\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if (i == 0 and j == 0) or (i == 1 and j == 1) or (i == 2 and j == 2):\n",
+    "                    if board[i][j] == IA:\n",
+    "                        c_ia += 1\n",
+    "                    if board[i][j] == EMPTY:\n",
+    "                        c_empty += 1\n",
+    "                        to_win_ia = str(k)\n",
+    "                    if c_ia == 2 and c_empty == 1:\n",
+    "                        print(\"Escoge esto para ganar: \"+to_win_ia)\n",
+    "                        founded = True\n",
+    "                k += 1\n",
+    "                \n",
+    "    if founded == False:\n",
+    "        c_ia, c_empty, to_win_ia, k = 0, 0, \"\", 0\n",
+    "\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if (i == 0 and j == 2) or (i == 1 and j == 1) or (i == 2 and j == 0):\n",
+    "                    if board[i][j] == IA:\n",
+    "                        c_ia += 1\n",
+    "                    if board[i][j] == EMPTY:\n",
+    "                        c_empty += 1\n",
+    "                        to_win_ia = str(k)\n",
+    "                    if c_ia == 2 and c_empty == 1:\n",
+    "                        print(\"Escoge esto para ganar: \"+to_win_ia)\n",
+    "                        founded = True\n",
+    "                k += 1\n",
+    "    \n",
+    "    if founded:\n",
+    "        index = to_win_ia\n",
+    "    else:\n",
+    "        index = choice(move_list)\n",
+    "    \n",
+    "    if index == '0':\n",
+    "        board[0][0] = IA\n",
+    "    elif index == '1':\n",
+    "        board[0][1] = IA\n",
+    "    elif index == '2':\n",
+    "        board[0][2] = IA\n",
+    "    elif index == '3':\n",
+    "        board[1][0] = IA\n",
+    "    elif index == '4':\n",
+    "        board[1][1] = IA\n",
+    "    elif index == '5':\n",
+    "        board[1][2] = IA\n",
+    "    elif index == '6':\n",
+    "        board[2][0] = IA\n",
+    "    elif index == '7':\n",
+    "        board[2][1] = IA\n",
+    "    elif index == '8':\n",
+    "        board[2][2] = IA\n",
+    "    else:\n",
+    "        print(\"Next\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +406,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '1', '2', '3', '4', '5', '6', '7', '8']\n",
+      "ia move\n",
+      "\n",
+      "\n",
+      "[['-' '-' '-']\n",
+      " ['-' 'X' '-']\n",
+      " ['-' '-' '-']]\n",
+      "\n",
+      "\n",
+      "['0', '1', '2', '3', '5', '6', '7', '8']\n",
+      "Fila: 0\n",
+      "Columna: 0\n",
+      "\n",
+      "\n",
+      "[['O' '-' '-']\n",
+      " ['-' 'X' '-']\n",
+      " ['-' '-' '-']]\n",
+      "\n",
+      "\n",
+      "['1', '2', '3', '5', '6', '7', '8']\n",
+      "ia move\n",
+      "\n",
+      "\n",
+      "[['O' '-' '-']\n",
+      " ['X' 'X' '-']\n",
+      " ['-' '-' '-']]\n",
+      "\n",
+      "\n",
+      "['1', '2', '5', '6', '7', '8']\n",
+      "Fila: 0\n",
+      "Columna: 1\n",
+      "\n",
+      "\n",
+      "[['O' 'O' '-']\n",
+      " ['X' 'X' '-']\n",
+      " ['-' '-' '-']]\n",
+      "\n",
+      "\n",
+      "['2', '5', '6', '7', '8']\n",
+      "Escoge esto para ganar: 5\n",
+      "ia move\n",
+      "\n",
+      "\n",
+      "[['O' 'O' '-']\n",
+      " ['X' 'X' 'X']\n",
+      " ['-' '-' '-']]\n",
+      "\n",
+      "\n",
+      "Ganador: X\n",
+      "Winn: X\n",
+      "Juego terminado.\n",
+      "Winn. afuera X\n"
+     ]
+    }
+   ],
+   "source": [
+    "def game_loop(board):\n",
+    "    #board = [[EMPTY,EMPTY,EMPTY],[EMPTY,EMPTY,EMPTY],[EMPTY,EMPTY,EMPTY]]\n",
+    "    empty_cell_count = 9\n",
+    "    won = False\n",
+    "    winner = \"False\"\n",
+    "    while empty_cell_count > 0 and won == False:\n",
+    "        all_moves_from_board(board,move_list)\n",
+    "        print(move_list)\n",
+    "        if empty_cell_count % 2 == 1:\n",
+    "            ai_move(board, move_list)\n",
+    "            print(\"ia move\")\n",
+    "            boardP(board)\n",
+    "            won, winner = game_won_by(board)\n",
+    "        else:\n",
+    "            row = int(input('Fila: '))\n",
+    "            col = int(input('Columna: '))\n",
+    "            board = player_move(board, row, col)\n",
+    "            boardP(board)\n",
+    "            won, winner = game_won_by(board)\n",
+    "        empty_cell_count = empty_cell_count - 1\n",
+    "                \n",
+    "    print(\"Juego terminado.\")\n",
+    "    return winner\n",
+    "\n",
+    "winner = game_loop(board)\n",
+    "print(\"Winn. afuera \"+winner)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,10 +506,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all moves: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "if winner == IA:\n",
+    "    print(\"all moves: \"+str(9-len(move_list)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +549,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 1. moves: 4\n",
+      "step 1. moves: 0\n",
+      "step 1. moves: 0\n",
+      "First player wins -IA-: 1\n",
+      "Second player wins -P-: 0\n",
+      "Draw: 0\n",
+      "Total: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_wins(winner)\n",
+    "count_possibilities()"
+   ]
   }
  ],
  "metadata": {
